--- a/VKontakteApp/Info.plist
+++ b/VKontakteApp/Info.plist
@@ -4,6 +4,11 @@
 <dict>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string></string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
